--- a/ios-engineer.html
+++ b/ios-engineer.html
@@ -44,7 +44,7 @@
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Netatmo/743999698365556-ios-software-engineer'>Netatmo iOS Software Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Netatmo/743999698365556-ios-software-engineer'>Netatmo iOS Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -64,7 +64,7 @@
 <p><span class="badge badge-light">Warsaw Warsaw  Barcelona Warsaw</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/glovo/jobs/4489115002'>Job Application for iOS Engineer - Customer Experience at Glovo</a></h5> 
+<h5><a href='https://boards.greenhouse.io/glovo/jobs/4489115002'>Job Application for iOS Engineer - Customer Experience at Glovo</a></h5> 
 <p><span class="badge badge-light">Barcelona Barcelona</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -161,7 +161,7 @@ paradigm?...</p>
 <p>6 days ago ... Experience working with push data (working with web sockets) and dynamic ?live 
 like? mobile applications. ? Experience with e-commerce applications in a?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://neugelb.join.com/jobs/449059-devops-engineer-m-w-d'>Job @ NEUGELB Studios (Frankfurt): DevOps Engineer... | JOIN</a></h5> 
+<h5><a href='https://neugelb.join.com/jobs/449059-devops-engineer-m-w-d'>Job @ NEUGELB Studios (Frankfurt): DevOps Engineer... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -233,7 +233,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p>4 days ago ... Software Development Engineer | US - Sunnyvale ? Backend Java Developer - 
 Yahoo! Finance | US - Sunnyvale ? Software Dev Engineer | US - Sunnyvale.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/playstudios-inc/job/oeAkbfw3'>PLAYSTUDIOS, Inc. Careers - BI Data Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/playstudios-inc/job/oeAkbfw3'>PLAYSTUDIOS, Inc. Careers - BI Data Engineer</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>22 hours ago ... PLAYSTUDIOS is a developer of engaging casual games for the world's largest 
 social and mobile platforms. Founded by a team of experienced gaming and?...</p>
@@ -274,11 +274,11 @@ social and mobile platforms. Founded by a team of experienced gaming and?...</p>
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-10-13</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/coupang2/jobs/1912686'>Job Application for Principal, iOS Engineer[FinTech Business & Systems] at Coupang(TECH)</a></h5> 
+<h5><a href='https://boards.greenhouse.io/coupang2/jobs/1912686'>Job Application for Principal, iOS Engineer[FinTech Business & Systems] at Coupang(TECH)</a></h5> 
 <p><span class="badge badge-light">Seoul</span></p>
 <p>Posted on: 2019-10-13</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/coupang2/jobs/1912688'>Job Application for Sr. iOS Engineer (Coupang Media Group Tech) at Coupang(TECH)</a></h5> 
+<h5><a href='https://boards.greenhouse.io/coupang2/jobs/1912688'>Job Application for Sr. iOS Engineer (Coupang Media Group Tech) at Coupang(TECH)</a></h5> 
 <p><span class="badge badge-light">Seoul</span></p>
 <p>Posted on: 2019-10-13</p>
 <hr/>
@@ -294,7 +294,7 @@ social and mobile platforms. Founded by a team of experienced gaming and?...</p>
 <p><span class="badge badge-light">Vancouver, British Columbia Canada</span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/trunkclub/jobs/1840598?gh_src=o3unj4'>Job Application for iOS Engineer at Trunk Club</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/trunkclub/jobs/1840598?gh_src=o3unj4'>Job Application for iOS Engineer at Trunk Club</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Working for Trunk Club. When you join Trunk Club, you join the Nordstrom family. 
 Our fast-paced and entrepreneurial environment is paired with the strong?...</p>
@@ -307,7 +307,7 @@ Our fast-paced and entrepreneurial environment is paired with the strong?...</p>
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/mapboxminsk/jobs/1900222'>Job Application for iOS Engineer, Search at Mapbox Minsk</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/mapboxminsk/jobs/1900222'>Job Application for iOS Engineer, Search at Mapbox Minsk</a></h5> 
 <p><span class="badge badge-light">Minsk  Minsk Minsk</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -368,7 +368,7 @@ the fourth largest Travel Management Company in the world because of our?...</p>
 <p><span class="badge badge-light">Cambridge England, United Kingdom</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/smartrecruiters/743999696946712-ios-engineer'>SmartRecruiters Inc iOS Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/smartrecruiters/743999696946712-ios-engineer'>SmartRecruiters Inc iOS Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Krak?w</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
@@ -407,7 +407,7 @@ the fourth largest Travel Management Company in the world because of our?...</p>
 <p><span class="badge badge-light">Seoul</span></p>
 <p>Posted on: 2019-10-06</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tribalscale.workable.com/j/CCDD63A4FF'>TribalScale - Jobs: iOS Engineer - Toronto - Apply online</a></h5> 
+<h5><a href='https://tribalscale.workable.com/j/CCDD63A4FF'>TribalScale - Jobs: iOS Engineer - Toronto - Apply online</a></h5> 
 <p><span class="badge badge-light">Toronto Toronto  Toronto  Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-10-06</p>
 <hr/>
@@ -451,7 +451,7 @@ the fourth largest Travel Management Company in the world because of our?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-04</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.womenwhocode.com/jobs/5212'>iOS Software Engineer - Unearth | Women Who Code</a></h5> 
+<h5><a href='https://www.womenwhocode.com/jobs/5212'>iOS Software Engineer - Unearth | Women Who Code</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-03</p>
 <hr/>
